--- a/assets/settings.json
+++ b/assets/settings.json
@@ -9,7 +9,7 @@
   "apiSettings": {
     "creator": "RyzenThawne",
     "apikey": [
-      "falcon-api"
+      "ryzenthawne-api"
     ]
   },
   "categories": [
