--- a/assets/settings.json
+++ b/assets/settings.json
@@ -268,6 +268,16 @@
           }
         },
         {
+          "name": "ToFigure",
+          "desc": "Mengubah foto menjadi figurin",
+          "path": "/tools/tofigure?url=",
+          "status": "ready",
+          "params": {
+            "url": "URL gambar yang ingin diubah."
+          }
+        },
+            
+        {
           "name": "Emoji Mix",
           "desc": "Menggabungkan dua emoji menjadi satu emoji baru yang unik dalam bentuk gambar.",
           "path": "/tools/emojimix?emoji1=&emoji2=",
